--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -556,7 +556,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Nightmare Bringer</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Distant Dream</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a>
 					</td>
 				</tr>
 
@@ -1598,6 +1598,255 @@
 				<!-- Demon Horde Spear -->
 				<tr class="bg-dark-gray-2">
 					<td>Demon Horde Spear</td>
+					<td colspan="2">
+                        <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
+	<!-- ========== ========== ========== ========== ==========
+    Axe Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="axe" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Axe Smithing Texts</h2>
+            <img src="./img/axe_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Ame-No-Mahitotsu's Axe -->
+				<tr class="bg-dark-gray-2">
+					<td>Ame-No-Mahitotsu's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Benkei's Axe -->
+				<tr class="">
+					<td>Benkei's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Soul Of The Warrior Monk</a>
+					</td>
+				</tr>
+
+				<!-- Blessed Vajra Hammer -->
+				<tr class="bg-dark-gray-2">
+					<td>Blessed Vajra Hammer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">White Tiger</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Palace Of The Damned</a>
+					</td>
+				</tr>
+
+				<!-- Demon God Hammer -->
+				<tr class="">
+					<td rowspan="3">Demon God Hammer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing in Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Demon's Axe -->
+				<tr class="bg-dark-gray-2">
+					<td>Demon's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Yoki (Axe)</a>
+					</td>
+					<td>
+						<span>Any mission that has a Yoki (that wields an Axe)</span>
+					</td>
+				</tr>
+
+				<!-- Genno's Hammer -->
+				<tr class="">
+					<td rowspan="2">Genno's Hammer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Gojinka Hammer -->
+				<tr class="bg-dark-gray-2">
+					<td>Gojinka Hammer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nightmare Bringer</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a>
+					</td>
+				</tr>
+
+				<!-- Gozutenno's Axe -->
+				<tr class="">
+					<td>Gozutenno's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Obsidian Samurai</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Formal Match</a>
+					</td>
+				</tr>
+
+				<!-- Holy Axe -->
+				<tr class="bg-dark-gray-2">
+					<td>Holy Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Ippon-Datara's Hammer -->
+				<tr class="">
+					<td>Ippon-Datara's Hammer</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ippon-Datara (Hammer)</a>
+					</td>
+					<td>
+						<span>Any mission that has an Ippon-Datara (that wields a Hammer)</span>
+					</td>
+				</tr>
+
+				<!-- Kintaro's Axe -->
+				<tr class="bg-dark-gray-2">
+					<td>Kintaro's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Sakata Kintoki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Unmovable Mountain</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Unstoppable Whirlwind</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Ryomen Sukuna's Axe -->
+				<tr class="">
+					<td>Ryomen Sukuna's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mount Tenno</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mountain Of The Dark Lord (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a>
+					</td>
+				</tr>
+
+				<!-- Shuten Doji's Club -->
+				<tr class="bg-dark-gray-2">
+					<td>Shuten Doji's Club</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+
+				<!-- Slayer's Axe -->
+				<tr class="">
+					<td rowspan="2">Slayer's Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kashin Koji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Cherry Blossom Viewing In Daigo</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
+					</td>
+				</tr>
+
+				<!-- Wooden Axe -->
+				<tr class="bg-dark-gray-2">
+					<td>Wooden Axe</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Sakata Kintoki</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Unmovable Mountain</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Unstoppable Whirlwind</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Winds Of Ruin</a>
+					</td>
+				</tr>
+
+				<!-- Demon Horde Axe -->
+				<tr class="">
+					<td>Demon Horde Axe</td>
 					<td colspan="2">
                         <span>Pre Order DLC / Complete Edition - Found at the Shrine in the "Boons" section</span>
 					</td>
